# xmonad

./: stack.yaml  wmeffect.cabal  xmonad.cabal
src/XMonad/: Config.hs  Core.hs  Layout.hs  Main.hs  ManageHook.hs  Operations.hs  StackSet.hs
