name:               wmeffect
version:            0.1.0.0
synopsis:           A tiling window manager
description:        A fork of xmonad.
license:            BSD3
license-file:       LICENSE
author:             Spencer Janssen, Don Stewart, Adam Vogt, David Roundy, Jason Creighton,
                    Brent Yorgey, Peter Jones, Peter Simons, Andrea Rossato, Devin Mullins,
                    Lukas Mai, Alec Berryman, Stefan O'Rear, Daniel Wagner, Peter J. Jones,
                    Daniel Schoepe, Karsten Schoelzel, Neil Mitchell, Joachim Breitner,
                    Peter De Wachter, Eric Mertens, Geoff Reedy, Michiel Derhaeg,
                    Philipp Balzarek, Valery V. Vorotyntsev, Alex Tarkovsky, Fabian Beuke,
                    Felix Hirn, Michael Sloan, Tomas Janousek, Vanessa McHale, Nicolas Pouillard,
                    Aaron Denney, Austin Seipp, Benno Fünfstück, Brandon S Allbery, Chris Mears,
                    Christian Thiemann, Clint Adams, Daniel Neri, David Lazar, Ferenc Wagner,
                    Francesco Ariis, Gábor Lipták, Ivan N. Veselov, Ivan Tarasov, Javran Cheng,
                    Jens Petersen, Joey Hess, Jonne Ransijn, Josh Holland, Khudyakov Alexey,
                    Klaus Weidner, Michael G. Sloan, Mikkel Christiansen, Nicolas Dudebout,
                    Ondřej Súkup, Paul Hebble, Shachaf Ben-Kiki, Siim Põder, Tim McIver,
                    Trevor Elliott, Wouter Swierstra, Conrad Irwin, Tim Thelion,
                    Sebastian Witte
maintainer:         woozletoff@gmail.com
tested-with:        GHC == 8.6.5
category:           System
homepage:           https://github.com/saep/wmeffect
bug-reports:        https://github.com/saep/wmeffect/issues
build-type:         Simple
extra-source-files: README.md
                    tests/*.hs
                    tests/Properties/*.hs
                    tests/Properties/Layout/*.hs
cabal-version:      >= 1.8

source-repository head
  type:     git
  location: https://github.com/saep/wmeffect

flag testing
  default:     False
  manual:      True
  description: Testing mode, only build minimal components

library
  exposed-modules: XMonad
                   XMonad.Config
                   XMonad.Core
                   XMonad.Layout
                   XMonad.Main
                   XMonad.ManageHook
                   XMonad.Operations
                   XMonad.StackSet
  other-modules:   Paths_xmonad
  hs-source-dirs:  src
  build-depends:   base                  >= 4.9 && < 5
                 , X11                   >= 1.8 && < 1.10
                 , aeson
                 , containers
                 , data-default
                 , directory
                 , extensible-exceptions
                 , filepath
                 , mtl
                 , polysemy
                 , process
                 , setlocale
                 , unix
                 , utf8-string           >= 0.3 && < 1.1
  ghc-options:     -funbox-strict-fields -Wall -fno-warn-unused-do-bind -O2 -flate-specialise -fspecialise-aggressively
  default-extensions:
      DataKinds
    , FlexibleContexts
    , GADTs
    , LambdaCase
    , PolyKinds
    , RankNTypes
    , ScopedTypeVariables
    , TypeApplications
    , TypeOperators
    , TypeFamilies

  if flag(testing)
    buildable: False

executable xmonad
  main-is:       Main.hs
  build-depends: base, X11, mtl, unix, xmonad
  ghc-options:   -Wall -fno-warn-unused-do-bind

test-suite properties
  type:           exitcode-stdio-1.0
  main-is:        Properties.hs
  other-modules:  Instances
                  Properties.Delete
                  Properties.Failure
                  Properties.Floating
                  Properties.Focus
                  Properties.GreedyView
                  Properties.Insert
                  Properties.Layout.Full
                  Properties.Layout.Tall
                  Properties.Screen
                  Properties.Shift
                  Properties.Stack
                  Properties.StackSet
                  Properties.Swap
                  Properties.View
                  Properties.Workspace
                  Utils
  hs-source-dirs: tests
  build-depends:  base, QuickCheck >= 2, X11, containers, extensible-exceptions, xmonad
